// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`McpStatus > renders correctly when discovery is in progress 1`] = `
"⏳ MCP servers are starting up (0 initializing)...
Note: First startup may take longer. Tool availability will update automatically.

Configured MCP servers:

🟢 server-1 - Ready (1 tool)
A test server
  Tools:
  - tool-1
    A test tool
"
`;

exports[`McpStatus > renders correctly with a blocked server 1`] = `
"Configured MCP servers:

🟢 server-1 - Ready (1 tool)
A test server
  Tools:
  - tool-1
    A test tool

🔴 server-1 (from test-extension) - Blocked
"
`;

exports[`McpStatus > renders correctly with a connected server 1`] = `
"Configured MCP servers:

🟢 server-1 - Ready (1 tool)
A test server
  Tools:
  - tool-1
    A test tool
"
`;

exports[`McpStatus > renders correctly with a connecting server 1`] = `
"Configured MCP servers:

🟢 server-1 - Ready (1 tool)
A test server
  Tools:
  - tool-1
    A test tool
"
`;

exports[`McpStatus > renders correctly with a disconnected server 1`] = `
"Configured MCP servers:

🟢 server-1 - Ready (1 tool)
A test server
  Tools:
  - tool-1
    A test tool
"
`;

exports[`McpStatus > renders correctly with authenticated OAuth status 1`] = `
"Configured MCP servers:

🟢 server-1 - Ready (1 tool) (OAuth)
A test server
  Tools:
  - tool-1
    A test tool
"
`;

exports[`McpStatus > renders correctly with expired OAuth status 1`] = `
"Configured MCP servers:

🟢 server-1 - Ready (1 tool) (OAuth expired)
A test server
  Tools:
  - tool-1
    A test tool
"
`;

exports[`McpStatus > renders correctly with many resources (truncated) 1`] = `
"Configured MCP servers:

🟢 server-1 - Ready (1 tool, 25 resources)
A test server
  Tools:
  - tool-1
    A test tool
  Resources:
  - resource-1 (file:///tmp/resource-1.txt)
    Resource 1 description
  - resource-2 (file:///tmp/resource-2.txt)
    Resource 2 description
  - resource-3 (file:///tmp/resource-3.txt)
    Resource 3 description
  - resource-4 (file:///tmp/resource-4.txt)
    Resource 4 description
  - resource-5 (file:///tmp/resource-5.txt)
    Resource 5 description
  - resource-6 (file:///tmp/resource-6.txt)
    Resource 6 description
  - resource-7 (file:///tmp/resource-7.txt)
    Resource 7 description
  - resource-8 (file:///tmp/resource-8.txt)
    Resource 8 description
  - resource-9 (file:///tmp/resource-9.txt)
    Resource 9 description
  - resource-10 (file:///tmp/resource-10.txt)
    Resource 10 description
    ... 15 resources hidden
"
`;

exports[`McpStatus > renders correctly with parametersJsonSchema 1`] = `
"Configured MCP servers:

🟢 server-1 - Ready (1 tool)
A test server
  Tools:
  - tool-1
    A test tool
      Parameters:
      {
        "type": "object",
        "properties": {
          "param1": {
            "type": "string"
          }
        }
      }
"
`;

exports[`McpStatus > renders correctly with prompts 1`] = `
"Configured MCP servers:

🟢 server-1 - Ready (1 tool, 1 prompt)
A test server
  Tools:
  - tool-1
    A test tool
  Prompts:
  - prompt-1
    A test prompt
"
`;

exports[`McpStatus > renders correctly with resources 1`] = `
"Configured MCP servers:

🟢 server-1 - Ready (1 tool, 1 resource)
A test server
  Tools:
  - tool-1
    A test tool
  Resources:
  - resource-1 (file:///tmp/resource-1.txt)
    A test resource
"
`;

exports[`McpStatus > renders correctly with schema enabled 1`] = `
"Configured MCP servers:

🟢 server-1 - Ready (1 tool)
A test server
  Tools:
  - tool-1
    A test tool
      Parameters:
      {
        "type": "object",
        "properties": {
          "param1": {
            "type": "string"
          }
        }
      }
"
`;

exports[`McpStatus > renders correctly with unauthenticated OAuth status 1`] = `
"Configured MCP servers:

🟢 server-1 - Ready (1 tool) (OAuth not authenticated)
A test server
  Tools:
  - tool-1
    A test tool
"
`;
